feat: add timeline component from original branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div data-shotstack-studio class="c-shotstack-studio"></div>
+		<div data-shotstack-timeline class="c-shotstack-timeline"></div>
 
 		<script type="module" src="/src/main.ts"></script>
 	</body>
