--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/assets/images/typescript.svg" />
+		<link rel="stylesheet" href="/src/styles/main.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Shotstack Canvas</title>
+		<title>Shotstack Studio</title>
 	</head>
 	<body>
 		<div data-shotstack-studio class="c-shotstack-studio"></div>
